[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc_macros = { path = "./proc_macros" }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = "0.12.5"
tokio = { version = "1", features = ["full"] }
regex = "1.10.6"
moka = { version = "0.12.8", features = ["future"] }
tracing = "0.1.40"
env_logger = "0.11.5"
